plugins/devkit/devkit-java-tests/testData/inspections/presentation/DeprecatedIcon.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = "<error descr="'Icon' is deprecated">AllIcons.Icon</error>")
public class DeprecatedIcon {
}